Might've fixed mobile hobby image stretch
- Cannot test in dev env :(

--- a/src/App.scss
+++ b/src/App.scss
@@ -122,6 +122,8 @@ header h1 {
 .foto img {
 	display: block;
 	width: 100%;
+	height: 230px;
+	object-fit: scale-down;
 }
 
 .foto div {
